2005-07-28  Marc Singer  <elf@buici.com>

	* src/drivers/drv-smc91x.c: Implemented smc91x driver which is
	available to both the lpd79520 and the lpd7a40x boards.
 
	* src/mach-lh7952x/init-lpd79520.c: Fixed the initialization of
	the memory region where CF is found.  CF driver working again.
 
2005-07-11  Marc Singer  <elf@buici.com>

	* src/apex/cmd-dump.c (cmd_dump): Added dump display width to make
	it easier to read registers and machine code.

2005-07-07  Marc Singer  <elf@buici.com>

	* src/net/rarp.c (cmd_rarp): RARP implemented.

	* src/apex/cmd-help.c (cmd_help): Changed the way that commands
	are sorted such that there is no change to the R/O portion of the
	file.  Now, sorting is done only when displaying the help text.

	* src/mach-lh7952x/drv-emac.c (eth_open): Basis of ethernet driver
	is working.

	* src/arch-arm/entry/apex.lds.S: Neglected alignment caused a
	crash when the data segment wasn't aligned.  The service data was
	misaligned such that the service start addresses were wrong. 

2005-07-06  Marc Singer  <elf@buici.com>

	* src/apex/cmd-dump.c (cmd_dump): Added more mode to the dump
	command.

	* src/apex/command.c (expand_variables): Alias and environment
	expansion in the command line.  This will make some people's lives
	easier.

2005-06-15  Marc Singer  <elf@buici.com>

	* src/apex/command.c (exec_monitor): Adding configuration option
	to sort commands for the sake of better help.

	* src/apex/cmd-xreceive.c: Revising help text.

2005-06-14  Marc Singer  <elf@buici.com>

	* src/drivers/driver.c (parse_descriptor): Fixed the driver parser
	dependency on the filesystem drivers.

	* src/drivers/drv-fat.c (fat_read): Region length calc, again.

	* src/drivers/drv-ext2.c (ext2_read): Fixed the region length
	calcs.

	* src/drivers/drv-jffs2.c (jffs2_open): Fixed some of the region
	length calcs.

2005-06-13  Marc Singer  <elf@buici.com>

	* src/drivers/drv-jffs2.c (jffs2_path_to_inode): Needed to